// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocDetails renders for LO 1`] = `
<LegalOfficerLocContextProvider
  backPath="/"
  detailsPath={[Function]}
  locId={
    UUID {
      "bytes": Uint8Array [
        174,
        212,
        198,
        228,
        151,
        158,
        72,
        173,
        190,
        110,
        75,
        211,
        159,
        185,
        71,
        98,
      ],
    }
  }
>
  <ContextualizedLocDetails />
</LegalOfficerLocContextProvider>
`;

exports[`LocDetails renders for user as Requester 1`] = `
<UserLocContextProvider
  backPath="/"
  detailsPath={[Function]}
  locId={
    UUID {
      "bytes": Uint8Array [
        174,
        212,
        198,
        228,
        151,
        158,
        72,
        173,
        190,
        110,
        75,
        211,
        159,
        185,
        71,
        98,
      ],
    }
  }
>
  <UserContextualizedLocDetails
    contributionMode="Requester"
  />
</UserLocContextProvider>
`;

exports[`LocDetails renders for user as verified issuer 1`] = `
<UserLocContextProvider
  backPath="/"
  detailsPath={[Function]}
  locId={
    UUID {
      "bytes": Uint8Array [
        174,
        212,
        198,
        228,
        151,
        158,
        72,
        173,
        190,
        110,
        75,
        211,
        159,
        185,
        71,
        98,
      ],
    }
  }
>
  <UserContextualizedLocDetails
    contributionMode="Issuer"
  />
</UserLocContextProvider>
`;
